--- a/pageone.html
+++ b/pageone.html
@@ -1,6 +1,8 @@
 <html>
     <head>My First Page</head>
 <body>
-    <a href=""https://myoungjureyna.github.io/root/pagetwo.html">Page2</a>
+    <a herf="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
+
+    <a href=""https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a>
 </body>
 </html>
