--- a/pagetwo.html
+++ b/pagetwo.html
@@ -4,7 +4,7 @@
     <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
 
-    
+    <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a> 
 </body>
 
 </html>
