--- a/pagetwo.html
+++ b/pagetwo.html
@@ -5,6 +5,9 @@
 
 
     <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a> 
+
+
+    <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
 </body>
 
 </html>
