--- a/pagetwo.html
+++ b/pagetwo.html
@@ -8,6 +8,8 @@
 
 
     <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
+
+<p>This is page TWO !! I linked 2 pages Now!!</p>
 </body>
 
 </html>
