--- a/pagethree.html
+++ b/pagethree.html
@@ -1,3 +1,6 @@
 <html>
     <head>My Third Page</head>
+<body>
+    <a href="https://myoungjureyna.github.io/root/page1.html">Page 1</a>
+</body>
 </html>
