--- a/pagethree.html
+++ b/pagethree.html
@@ -2,5 +2,8 @@
     <head>My Third Page</head>
 <body>
     <a href="https://myoungjureyna.github.io/root/page1.html">Page 1</a>
+
+
+    <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a>
 </body>
 </html>
