fix the link for page 1

--- a/pagethree.html
+++ b/pagethree.html
@@ -1,7 +1,7 @@
 <html>
     <head>My Third Page</head>
 <body>
-    <a href="https://myoungjureyna.github.io/root/page1.html">Page 1</a>
+    <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
 
     <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a>
