--- a/pagethree.html
+++ b/pagethree.html
@@ -5,5 +5,8 @@
 
 
     <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a>
+
+
+    <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
 </body>
 </html>
