--- a/pagethree.html
+++ b/pagethree.html
@@ -8,5 +8,7 @@
 
 
     <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
+
+    <p>The third and last page is HERE !! I'm so proud of myself! I made it :)</p>
 </body>
 </html>
