fix the typo for page1Link

--- a/pageone.html
+++ b/pageone.html
@@ -1,7 +1,7 @@
 <html>
     <head>My First Page</head>
 <body>
-    <a herf="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
+    <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
 
     <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a>
