--- a/pageone.html
+++ b/pageone.html
@@ -1,5 +1,9 @@
 <html>
-    <head>My First Page</head>
+<head>
+<title>Homework3    
+</head>
+
+</title>
 <body>
     <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
