--- a/pageone.html
+++ b/pageone.html
@@ -1,17 +1,19 @@
 <html>
 <head>
-<title>Homework3    
+<title>Homework3</title>    
 </head>
 
-</title>
+
 <body>
-    <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
+    <h1>My Greatest First Page</h1>
+    <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a><br>
 
 
-    <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a>
+
+    <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a><br>
 
 
-    <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
+    <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a><br>
 
 </body>
 </html>
