--- a/pageone.html
+++ b/pageone.html
@@ -6,6 +6,12 @@
 
 <body>
     <h1>My Greatest First Page</h1>
+    <style>
+        h1{color:magenta;}
+        h1{font-size: 300%;}
+        h1{background-color: mistyrose;}
+    </style>
+    
     <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a><br>
     <br>
     <br>
