--- a/pagetwo.html
+++ b/pagetwo.html
@@ -1,5 +1,7 @@
 <html>
-<head>My Second Page</head>
+<head>
+    <title>Page2-Homework3</title>
+</head>
 <body>
     <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
