--- a/pagetwo.html
+++ b/pagetwo.html
@@ -2,7 +2,10 @@
 <head>
     <title>Page2-Homework3</title>
 </head>
+
+
 <body>
+    <center>
     <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
 
@@ -11,7 +14,8 @@
 
     <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
 
-<p>This is page TWO !! I linked 2 pages Now!!</p>
+    <p>This is page TWO !! I linked 2 pages Now!!</p>
+    </center>
 </body>
 
 </html>
