--- a/pagetwo.html
+++ b/pagetwo.html
@@ -6,6 +6,13 @@
 
 <body>
     <center>
+    <h1>My Second Page📃</h1>
+        <style>
+            h1{color:orangered;}
+            h1{font-size: 300%;}
+            h1{background-color:blanchedalmond;}
+        </style>
+        
     <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
 
