--- a/pagetwo.html
+++ b/pagetwo.html
@@ -12,16 +12,21 @@
             h1{font-size: 300%;}
             h1{background-color:blanchedalmond;}
         </style>
-        
-    <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
+    <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
+        <br>
+        <br>
 
     <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a> 
-
+        <br>
+        <br>
 
     <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
-
-    <p>This is page TWO !! I linked 2 pages Now!!</p>
+        <br>
+        <br>
+        <br>
+    <p>This is page <span>TWO !!</span><br>
+        I linked <span>2 pages</span> Now!!</p>
     </center>
 </body>
 
