font-size up for text

--- a/pagetwo.html
+++ b/pagetwo.html
@@ -27,6 +27,9 @@
         <br>
     <p>This is page <span>TWO !!</span><br>
         I linked <span>2 pages</span> Now!!</p>
+            <style>
+                p{font-size:150%;}
+            </style>   
     </center>
 </body>
 
