--- a/pagethree.html
+++ b/pagethree.html
@@ -1,5 +1,7 @@
 <html>
-    <head>My Third Page</head>
+    <head>
+        <title>Page3-Homework3</title>
+    </head>
 <body>
     <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
