--- a/pagethree.html
+++ b/pagethree.html
@@ -2,15 +2,35 @@
     <head>
         <title>Page3-Homework3</title>
     </head>
-<body>
-    <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
 
+
+<body>
+    <center>
+    <h1>My Third Page</h1>
+        <style>
+            h1{color:navy;}
+            h1{font-size: 300%;}
+            h1{background-color: rgb(232, 250, 255);}
+        </style>
+
+        
+    <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
+        <br>
+        <br>
+        <br>
 
     <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a>
-
+        <br>
+        <br>
+        <br>
 
     <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
+        <br>
+        <br>
+        <br>
+        <br>
 
     <p>The third and last page is HERE !! I'm so proud of myself! I made it :)</p>
+    </center>    
 </body>
 </html>
