font size up for text

--- a/pagethree.html
+++ b/pagethree.html
@@ -13,7 +13,7 @@
             h1{background-color: rgb(232, 250, 255);}
         </style>
 
-        
+
     <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
         <br>
         <br>
@@ -30,7 +30,11 @@
         <br>
         <br>
 
-    <p>The third and last page is HERE !! I'm so proud of myself! I made it :)</p>
+    <p>The third and <span>last page is HERE !!</span><br>
+         I'm so proud of myself!<br>I made it :)</p>
+         <style>
+             p{font-size:250%;}
+         </style>
     </center>    
 </body>
 </html>
