break line of text

--- a/pagethree.html
+++ b/pagethree.html
@@ -30,7 +30,7 @@
         <br>
         <br>
 
-    <p>The third and <span>last page is HERE !!</span><br>
+    <p>The third and last page is HERE !!<br>
          I'm so proud of myself!<br>I made it :)</p>
          <style>
              p{font-size:250%;}
