--- a/pagethree.html
+++ b/pagethree.html
@@ -31,7 +31,7 @@
         <br>
 
     <p>The third and last page is HERE !!<br>
-         I'm so proud of myself!<br>I made it :)</p>
+         I'm so proud of myself!<br>I made it 😍</p>
          <style>
              p{font-size:180%;}
          </style>
