--- a/pageone.html
+++ b/pageone.html
@@ -6,7 +6,7 @@
 
 <body>
     <center>
-    <h1>My Greatest First Page</h1>
+    <h1>My Greatest First Page♥</h1>
     <style>
         h1{color:magenta;}
         h1{font-size: 300%;}
