--- a/pagetwo.html
+++ b/pagetwo.html
@@ -25,8 +25,8 @@
         <br>
         <br>
         <br>
-    <p>This is page <span>TWO !!</span><br>
-        I linked <span>2 pages</span> Now!!</p>
+    <p>This is page <strong>TWO !!</strong><br>
+        I linked <strong>2 pages</strong> Now!!</p>
             <style>
                 p{font-size:150%;}
             </style>   
