divided between Links

--- a/pagethree.html
+++ b/pagethree.html
@@ -14,21 +14,22 @@
         </style>
 
 
-    <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
-        <br>
-        <br>
-        <br>
+    Relative Link:
+     <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
+        <div>
+        <div>
+        <div>
 
     <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a>
-        <br>
-        <br>
-        <br>
+        <div>
+        <div>
+        <div>
 
     <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
-        <br>
-        <br>
-        <br>
-        <br>
+        <div>
+        <div>
+        <div>
+        <div>
 
     <p>The third and last page is HERE !!<br>
          I'm so proud of myself!<br>I made it 😍</p>
