--- a/pagethree.html
+++ b/pagethree.html
@@ -14,22 +14,23 @@
         </style>
 
 
-    <p>Relative Link:</p>
+    <p>Relative Link:</p><br>
+
      <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
-        <div>
-        <div>
-        <div>
+        <br>
+        <br>
+        <br>
 
     <a href="https://myoungjureyna.github.io/root/pagetwo.html">Page 2</a>
-        <div>
-        <div>
-        <div>
+        <br>
+        <br>
+        <br>
 
     <a href="https://myoungjureyna.github.io/root/pagethree.html">Page 3</a>
-        <div>
-        <div>
-        <div>
-        <div>
+        <br>
+        <br>
+        <br>
+        <br>
 
     <p>The third and last page is HERE !!<br>
          I'm so proud of myself!<br>I made it 😍</p>
