font size of Relative Link

--- a/pagethree.html
+++ b/pagethree.html
@@ -14,7 +14,7 @@
         </style>
 
 
-    <p>Relative Link:</p><br>
+    <p style="font-size:100%;">Relative Link:</p><br>
 
      <a href="https://myoungjureyna.github.io/root/pageone.html">Page 1</a>
         <br>
