--- a/pageone.html
+++ b/pageone.html
@@ -29,7 +29,7 @@
     <br>
 
     <p>Absolute Link : </p><a href="https://www.instagram.com/cha.___.aaaaaaa/?utm_source=ig_embed&amp;utm_campaign=loading" style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px;" target="_blank">My instagram</a>
-     
+    <p>Relative Link:</p><a href="../image/Instalogo.jpg"
     </center>
 </body>
 </html>
