--- a/pageone.html
+++ b/pageone.html
@@ -29,7 +29,7 @@
     <br>
 
     <p>Absolute Link : </p><a href="https://www.instagram.com/cha.___.aaaaaaa/?utm_source=ig_embed&amp;utm_campaign=loading" target="_blank">My instagram</a>
-    <p>Relative Link:</p><a href="Instalogo.jpg"></a>
+    <p>Relative Link:</p><a href="/pageone.html">Myoungju's Website</a>
     </center>
 </body>
 </html>
