--- a/pagetwo.html
+++ b/pagetwo.html
@@ -26,7 +26,7 @@
         <br>
         <br>
         <p>Absolute Link : </p><a href="https://www.instagram.com/cha.___.aaaaaaa/?utm_source=ig_embed&amp;utm_campaign=loading" target="_blank">My instagram</a>
-        <p>Relative Link:</p><a href="pageone.html" target="_blank">Myoungju's Website</a><br><br>
+        <p>Relative Link:</p><a href="pageone.html">Myoungju's Website</a><br><br>
 
         
     <p>This is page <strong>TWO !!</strong><br>
