title and BG color

--- a/hw4/homework4.html
+++ b/hw4/homework4.html
@@ -1,1 +1,11 @@
+<html>
+    <head>
+        <title>Homework4</title>
+    </head>
+    <body bgcolor="F9DFDC">
 
+    <h1 align="center">
+        Design Elements Homework
+    </h1>
+</html>
+<br><br>
