insert web site address of each topic

--- a/hw4/homework4.html
+++ b/hw4/homework4.html
@@ -11,43 +11,43 @@
 <br><br>
 
 <!-- contrast -->
-<h2><center><a  href="https://deyoung.famsf.org/">De Young Museum Website - Contrast</a></center></h2>
-<ul align="left">
+    <h2><center><a  href="https://doordash.com/">Doordash Website - Contrast</a></center></h2>
+    <ul align="left">
     <li>The De Young Museum website uses <br>contrast effectively </li>
-<br><br>
+    <br><br>
     <li>Color - the blue text on a white background <br> - draws the eye to the menu bar and guides <br>the eye down the page </li>
-<br><br>
+    <br><br>
         <img src="http://berkeleycitycollege.us/RebeccaShalliker/Assignment_4/images/bluewhitecontrastex.png" alt="Contrast Example 1" align="left" width="500" height="100">
-<br><br>
-<br><br>
-<br><br>
-<br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
 
     <li> The image below the white is a <br> rust color which contrasts the blue<br> and white nicely</li>
-<br><br>
+    <br><br>
 
         <img src="http://berkeleycitycollege.us/RebeccaShalliker/Assignment_4/images/browncontrastex.png" alt="Contrast Example 2" align="left" width="400" height="200">
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
 
     <li>The font also contrasts with the varience<br> of bolded/not bolded text. </li>
-<br><br>
+    <br><br>
 
         <img src="http://berkeleycitycollege.us/RebeccaShalliker/Assignment_4/images/fontcontrastex.png" alt="Contrast Example 3" align="left" width="345" height="115">
-</ul>
-<br><br>
-<br><br>
-<br><br>
+    </ul>
+    <br><br>
+    <br><br>
+    <br><br>
 
 
 
 
 <!-- Repetition -->
-<h2><center><a  href="https://www.glossier.com/">Glossier Website - Repetition</a></center></h2>
+<h2><center><a  href="https://www.philzcoffee.com/"> Philzcoffee Website - Repetition</a></center></h2>
 <br><br>
 
 
@@ -96,7 +96,7 @@
 
 <!-- Alignment -->
 
-  <h2><center><a  href="https://www.origin.com/usa/en-us/store">Origin Website - Alignment</a></center></h2>
+  <h2><center><a  href="https://Amazon.com/">Origin Website - Alignment</a></center></h2>
     <dl>
           <dt>Alignment on Origin.com</dt>
               <dd>- Origin uses alignement in order to <br> easily view all of the games which they are <br> selling. This makes it easier for <br> the consumer to asses which game <br> interests them by displaying them in a consise <br> grid format.</dd>
@@ -147,7 +147,7 @@
   <br><br>
 
 <!-- Proximity -->
-<h2><center><a  href="https://goop.com/">Goop Website - Proximity</a></center></h2>
+<h2><center><a  href="https://www.netflix.com/">Goop Website - Proximity</a></center></h2>
 <br><br>
 
 
